Fix services tiles alignment

--- a/source/assets/stylesheets/components/_components.service.sass
+++ b/source/assets/stylesheets/components/_components.service.sass
@@ -2,6 +2,7 @@
 /// @name service
 
 .service
+  width: 100%
 
   +bp(md)
     width: 50%
